--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="apple-mobile-web-app-status-bar-style"content="black-translucent"/>
+    <meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no"/>
+
+  <meta name="viewport" content="initial-scale=1, viewport-fit=cover" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ToDo.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
