--- a/public/index.html
+++ b/public/index.html
@@ -339,5 +339,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   
-
-</body></html>
+<script>
+    if('serviceWorker' in navigator){
+      navigator.serviceWorker.register('/service-worker.js')
+    }
+</script>
+</body>
+</html>
